<resources>
    <string name="app_agree">同意</string>
    <string name="app_disagree">不同意</string>
    <string name="app_cancel">取消</string>
    <string name="app_connection">連線</string>
    <string name="app_sign_in">登入</string>
    <string name="app_registration">註冊</string>
    <string name="app_forgot_password">忘記密碼</string>
    <string name="Programming">燒錄中</string>
    <string name="app_menue">主選單</string>
    <string name="app_home_check_sensor">檢查感測器</string>
    <string name="app_trigger">觸發</string>
    <string name="app_home_program_sensor_phone">燒錄感測器</string>
    <string name="app_home_id_copy">複製感測器ID</string>
    <string name="app_setup">系統設定</string>
    <string name="app_home_obdii_relearn">車輛OBDII學碼</string>
    <string name="app_home_cloud_information">雲端資訊</string>
    <string name="app_home_online_shopping">線上訂購</string>
    <string name="app_user_manual">使用說明</string>
    <string name="app_scan_2d_code">掃描二維碼</string>
    <string name="app_mmy">車輛選擇</string>
    <string name="app_select_car_makes">選擇車型</string>
    <string name="app_select_car_model">選擇車款</string>
    <string name="app_select_year">選擇年份</string>
    <string name="app_number_choice">選擇燒錄數量</string>
    <string name="app_start">開始</string>
    <string name="app_key_in">輸入指定感測器ID</string>
    <string name="app_scan_and_packing">請掃描感測器外殼或包裝盒上的二維碼</string>
    <string name="app_program">燒錄</string>
    <string name="app_copy_original">複製原感測器ID</string>
    <string name="app_original_sensor">讀取原感測器</string>
    <string name="app_original_id">原感測器ID</string>
    <string name="app_new_sensor">新發射器ID碼</string>
    <string name="app_new_sensor_list">新感測器列表</string>
    <string name="app_my_favorite">我的最愛</string>
    <string name="app_scan">掃描</string>
    <string name="app_setting">系統設定</string>
    <string name="app_setting_my_favorite">系統設定/我的最愛</string>
    <string name="app_my_favorite_setting">設定我的最愛</string>
    <string name="app_setting_wifi">系統設定/WIFI</string>
    <string name="app_wifi">WIFI設定</string>
    <string name="app_setting_bluetooth">系統設定/藍牙</string>
    <string name="app_bluetooth">藍牙</string>
    <string name="app_my_device">我的裝置</string>
    <string name="app_bluebud_other_device">其它裝置</string>
    <string name="app_setting_unit">系統設定/顯示單位t</string>
    <string name="app_units_tire">胎壓</string>
    <string name="app_temp_title">溫度</string>
    <string name="app_id_dec_hex">ID格式(10/16進制)</string>
    <string name="app_auto">自動</string>
    <string name="app_minutes">分鐘</string>
    <string name="app_never">不使用</string>
    <string name="app_setting_language">系統設定/語言</string>
    <string name="app_setting_device_information">系統設定/裝置資訊</string>
    <string name="app_device_name">裝置名稱</string>
    <string name="app_model">裝置型號</string>
    <string name="infomation_serial_number">裝置序號</string>
    <string name="infomation_software_version">軟體版本</string>
    <string name="app_hardware_version">硬體版本</string>
    <string name="app_database_version">資料庫版本</string>
    <string name="app_check_for_updates">檢查更新</string>
    <string name="app_system_update_auto">自動更新</string>
    <string name="app_reset_all_settings">恢復預設值</string>
    <string name="app_setting_privacy_policy">系統設定/隱私權</string>
    <string name="app_scan_tips">請掃描目錄或海報上的二維碼</string>
    <string name="Setting">設定</string>
    <string name="Area">地區</string>
    <string name="to_give">應用程式可能會根據您的所在地區為您提供當地內容</string>
    <string name="Select">選擇</string>
    <string name="Languages">語言</string>
    <string name="Languages_info">應用程式會使用列表上的第一個有支援的語言</string>
    <string name="Privacy_Policy">隱私權政策</string>
    <string name="Welcome">隱私權政策
        非常歡迎您使用「Orange USB TPMS 應用程式 」，當您開始使用我們的產品，即表示您信賴我們對您個人資訊的處理方式。本《隱私權政策》旨在協助您瞭解我們收集的資料類型、收集這些資料的原因以及這些資料的用途及方法。請您詳閱下列內容，若有任何疑問，歡迎與我們連絡sales@orange-electronic.com
        一、隱私權保護政策的適用範圍
        我們的《隱私權政策》適用於本產品的所有服務。我們的《隱私權政策》不適用於由其他公司或個人提供的服務，或我們服務所連結到的其他網站。
        二、個人資料的收集、處理
        • 我們提供產品和服務來幫助您更新產品程式資料、和提升產品功能。當您造訪本產品或使用本產品所提供之功能服務時，我們將視該服務功能性質，請您提供必要的個人資料、或收集一些資訊，並在該特定目的範圍內處理及利用您的個人資料，我們使用資料來增進產品和服務及提供更好的支援。我們只會在徵得您的同意時，才與本公司以外的其他公司、機構或個人分享個人資訊。
        • 我們收集資訊的管道如下:
        1. 您提供的資訊:可能包括但不限於您的姓名、聯絡信箱、連絡電話、產品序號、購買日期、公司名稱、主要銷售品牌、位址、或地址。在建立使用者帳戶或註冊產品、請求提供產品支援或其他服務、請求提供有關產品的資訊、或參與調查等相關情況下可能會要求您提供此類資訊。
        2. 我們經由您使用我們的產品和服務而取得的資訊:我們會針對您使用的服務和使用方式收集相關資訊，可能包括：
         裝置資訊：裝置專屬資訊例如裝置ID編號，包括機器ID、IMEI和/或MEID、產品授權和識別號碼，以及行動電話號碼在內的行動網路資訊等。
         記錄資訊：當您使用本產品時，我們會自動收集特定資訊並儲存在伺服器紀錄中。這類資訊包括：網際網路通訊協定(IP)位址、使用者名稱和帳戶名稱及相關資料、產品系統活動、設定等。
         位置資訊：我們會收集並處理您實際所在位置的相關資訊，包括IP位址、GPS/Wi-Fi/通信網路本地資訊確定的地理位置等。
         Cookie和類似技術之使用：Cookie是您在使用我們的產品時，本產品傳送給裝置的一小段文字，可讓我們的產品儲存您的使用資訊。為了提供您最佳的服務，當您使用我們的產品時，我們會使用各種技術收集並儲存資訊，這可能包括使用 Cookie 或類似技術來識別您的裝置。我們使用Cookie的目的有很多，例如：儲存您的偏好語言和其他設定，方便您下次使用我們的產品時套用同樣的設定或提供更實用的服務。我們會透過Cookie將特定活動儲存在本產品上，您可以終止網路連線來停止本產品所有Cookie，不過，請務必記得，如果您停用Cookie，我們有許多服務可能便無法正常運作，例如可能無法記住您的語言偏好設定。
        三、個人資料的使用
        • 本公司會將所收集的資訊用於提供、維持、保護與改善服務、開發新的服務，以及保護本公司產品和本公司產品使用者。本公司可能會將您的個人資料用於各種目的，包括：
        1. 回應您的信息要求，並為您提供更有效和高效的客戶服務
        2. 向您提供有關您向本公司購買的產品更新和信息
        3. 分析，市場調查和報告、管理與改善本公司業務
        4. 或適用法律允許或要求。
        5. 本公司也可能使用您的個人信息通過電子郵件與您聯繫，了解本公司產品，服務，促銷活動和特殊活動。
        四、您的選擇權利
        大家對於隱私權的疑慮各有不同，我們的目標是明列我們所收集的資訊，讓您瞭解使用資訊的方式，再做選擇。例如，您可以：
        • 刪除資料：您可自行清除連線裝置的Cookie，或聯絡我們要求刪除帳戶相關資料。
        • 變更或更正資料：您可以透過我們的產品帳戶編輯部分個人資料。在部分情況下，特別是資料有誤時，您也可以要求我們變更、更新或訂正您的資料。
        • 反對或限制資料使用：您可以要求我們停止使用所有或部分您的個人資料（例如：我們沒有持續使用的法定權利）或限制我們使用（例如：如果您的個人資料不正確或是透過非法取得的）。
        • 讀取和／或獲得您的資料： 您可以要求我們提供您個人資料的副本。
        五、個人資料的保護
        我們致力於保護所持有本公司和使用者的相關資訊，防止未經授權而遭到存取、竄改、揭露或毀損。尤其是：
        • 我們會審查收集、儲存、處理資訊的做法 (包括採取實體安全措施)，保護系統不致發生未經授權的存取。
        • 我們僅允許為了代表我們處理個人資訊而需要知悉該等資訊的員工、承包商和代理人存取資訊。且相關人員均須遵守嚴格的契約保密義務，一旦未遵守義務便將受到懲戒或解約處分。
        • 我們會定期審查本身產品和服務是否遵守《隱私權政策》。我們收到正式的書面申訴後，將與申訴人聯絡，處理後續事宜。我們會與適當的主管機關 (包括當地的資料保護主管機關) 合作，解決任何有關個人資料移轉且無法由我們直接與使用者解決的申訴。
        六、網站對外的相關連結
        本產品的網頁提供其他網站的網路連結，您也可經由本產品所提供的連結，點選進入其他網站。但該連結網站不適用本產品的隱私權保護政策，您必須參考該連結網站中的隱私權保護政策。
        七、我們分享的資訊
        除非適用下列任一情況，否則我們不會與本公司以外的其他公司、機構或個人分享使用者的個人資訊：
        • 事先徵得您的同意 :
        我們只會在徵得您的同意時，才與本公司以外的其他公司、機構或個人分享個人資訊。分享任何敏感的個人資訊前，我們都會先徵求您的同意。
        • 供外部處理
        我們會將個人資訊提供給我們的關係企業或其他可信賴的公司或人員，請他們根據我們的指示，並遵守本《隱私權政策》和任何其他適當的保密和安全措施，代為處理這類資訊。
        •  基於法律原因
        如果我們真誠地認為，為了達到下列目的，對個人資訊的存取、使用、保存或揭露屬合理必要行為時，我們將與 本公司以外的其他公司、機構或個人分享個人資訊：
        1. 符合任何適用法律、法規、法律函狀或強制性政府調閱要求的規定。
        2. 執行適用《服務條款》，包括調查可能的違規情事。
        3. 偵測、防止或以其他方式處理詐欺、安全或技術問題。
        4. 依法律規範應在合法範圍內，保護本公司、使用者或公眾之權利、財產或安全不致遭受危害。
        我們可能會對外公開並與合作夥伴(例如發佈商、廣告客戶或連結網站)分享不含身分識別內容的資訊。舉例來說，我們可能會將資訊對外公開，讓外界瞭解本公司服務的一般使用趨勢。
        如果本公司涉及合併、收購事宜或出售資產，我們將繼續嚴守任何個人資訊之保密，並於個人資訊移轉或應適用不同隱私權政策前，先行通知受影響的使用者。
        八、隱私權保護政策之變更
        我們的《隱私權政策》會不時變更。我們不會在未經您明確同意的情況下，即縮減本《隱私權政策》賦予您的權利。隱私權政策變更時一律會在本產品APP上發佈；如果屬於重大變更，我們會提供更明顯的通知，讓您在選擇繼續使用我們的產品前，有機會審閱修訂後的政策。

    </string>
    <string name="Agree">同意</string>
    <string name="Disagree">不同意</string>
    <string name="Sign_in">登入</string>
    <string name="E_mail">E-mail</string>
    <string name="Registration">註冊</string>
    <string name="Password">密碼</string>
    <string name="Forgot_password">忘記密碼</string>
    <string name="Reset_Password">重設密碼</string>
    <string name="Og_email">請輸入註冊O-Genius所設定的《電子郵件信箱》 </string>
    <string name="Submit">發送</string>
    <string name="Go_email">"請至您的電子信箱收取信件，找到我們發送的電子郵件，主題為“重設密碼"</string>
    <string name="Account_creation">建立帳戶</string>
    <string name="Create_your_email_account">創建您的帳戶</string>
    <string name="Account_Number">帳號</string>
    <string name="Choose_a_password">輸入密碼</string>
    <string name="At_least_8_characters">至少8個字符</string>
    <string name="Repeat_password">再次輸入密碼</string>
    <string name="Product_serial_number">產品序號</string>
    <string name="Personal_details">個人資料</string>
    <string name="First_Name">名字</string>
    <string name="Last_Name">姓</string>
    <string name="Company">公司</string>
    <string name="Contact_Phone_Number">電話</string>
    <string name="Physical_address_Mailing_address">郵寄地址</string>
    <string name="Country">區域</string>
    <string name="Street">街</string>
    <string name="City">市</string>
    <string name="State">省</string>
    <string name="ZP_Code">郵遞區號</string>
    <string name="Registration_success">註冊成功</string>
    <string name="Orange_USB_TPMS">Orange USB TPMS</string>
    <string name="Data_Loading">載入資訊</string>
    <string name="Orange_USB_TPMS_Application">Orange USB TPMS Application</string>
    <string name="Program_USB_TPMS">USB CABLE</string>
    <string name="Program_USB_PAD">USB PAD</string>
    <string name="Cloud_information">雲端數據</string>
    <string name="Online_shopping">線上購物</string>
    <string name="Users_manual">使用說明</string>
    <string name="Log_out">登出</string>
    <string name="Are_you_sure_you_want_to_log_out">你確定要退出嗎？</string>
    <string name="Yes">是</string>
    <string name="cancel">取消</string>
    <string name="ProgramUSB_TPMS">Program (USB TPMS)</string>
    <string name="Download_MYY_data">載入車輛數據</string>
    <string name="ID_COPY">ID COPY</string>
    <string name="Program">Program </string>
    <string name="Methods_of_vehicle_data_selection">選擇車輛數據方法</string>
    <string name="Scan_Code">掃描QR碼</string>
    <string name="Vehicle_data_selection">車輛數據選擇</string>
    <string name="Please_scan_the_QR_Code_on_the_catalog_or_poster">請掃描發射器或包裝盒上的ID QR碼</string>
    <string name="Select_CAR_Make">選擇車型</string>
    <string name="Select_CAR_Model">選擇車款</string>
    <string name="Select_Year">選擇年份</string>
    <string name="Please_insert_the_sensor_into_the_USB_PAD">將發射器插入USB PAD</string>
    <string name="Unlinked">未連結</string>
    <string name="START">開始</string>
    <string name="MENU">選單</string>
    <string name="Programming_completed">程序燒錄完成</string>
    <string name="Please_remove_the_sensor">請取下發射器</string>
    <string name="Programming_failed">程序燒錄失敗</string>
    <string name="Please_press_RE_PROGRAM">請按重新燒錄</string>
    <string name="RE_PROGRAM">重新燒錄</string>
    <string name="Relearn_Procedure">學碼步驟</string>
    <string name="Key_in_the_original_sensor_ID_number">輸入原發射器ID號碼</string>
    <string name="sensor_ID_number">sensor ID number</string>
    <string name="ID_code_should_be_8_characters">ID碼需為8個字元</string>
    <string name="Bluetooth_pairing_requirements">藍牙配對要求</string>
    <string name="would_like_to_with_pair">USB PAD將與您手機進行配對</string>
    <string name="Cancel">取消</string>
    <string name="Pair">配對</string>
    <string name="Program_sensor">開始燒錄</string>
    <string name="Programming_do_not_move_sensors">燒錄中請勿移動發射器</string>
    <string name="Next">下一步</string>
    <string name="error">錯誤</string>
    <string name="Programming_failed_where">燒錄失敗</string>
    <string name="Get_location">必須開啟定位功能才能啟動藍芽服務.</string>
    <string name="Prog_Sensor">重新燒錄</string>
    <string name="Please_Confirm_That_The_Sensor_Is_Connect">請確認傳感器已經連接</string>
    <string name="Sound">音效</string>
    <string name="AreaLanguage">區域和語言</string>
    <string name="Version_update">更新</string>
    <string name="ProvideUsbTpmsApp">提供USB TPMS APP\n燒錄模式说明</string>
    <string name="step1_1">步驟1.\n請將USB TPMS燒錄線連接手機與sensor
    </string>
    <string name="step1_2">步驟2.\n點選 Program(USB TPMS) </string>
    <string name="step1_3">步驟3.\n1. 確認燒錄線已連線
        2. 確認你的燒錄模式
        3. 選擇確認車輛資訊方式</string>
    <string name="step1_4">步驟4-1.\n按下掃描鍵後，請掃描目錄上您要的車輛資訊的二維碼，並跳至步驟6</string>
    <string name="step1_5">步驟4-2.\n按下車輛資訊鍵後，依序選擇品牌 → 選擇車型 → 選擇年份</string>
    <string name="step1_6">步驟5.\n確認提示欄車輛資訊正確，並按下"START"進行燒錄 </string>
    <string name="step1_7">步驟6.\n燒錄完成後,如需續燒錄相同資料sensor,請更換下一顆sensor,按下PROG.SENSOR
    </string>
    <string name="Set_up">確認</string>
    <string name="store_type">商店类型</string>
    <string name="app_default">默認</string>
    <string name="app_sensor_quantity">選擇燒錄數量</string>
    <string name="app_name">TPMS</string>
    <string name="autolock">更改睡眠定時器設置</string>
</resources>