<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal" android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttoncolor"
                android:text="@string/cancel"
                android:textColor="@color/white" android:layout_marginEnd="0.5dp"/>

        <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttoncolor"
                android:text="@string/Yes"
                android:textColor="@color/white" android:layout_marginStart="0.5dp"/>
    </LinearLayout>
    <TextView
            android:id="@+id/toper"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/buttoncolor"
            android:gravity="center"
            android:text="@string/Vehicle_data_selection"
            android:textColor="@color/white"
            android:textSize="18sp">

    </TextView>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="50dp" android:layout_marginBottom="70dp">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        >
            <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/Select_CAR_Make"
                    android:textSize="20sp"/>
            <Spinner
                    android:id="@+id/make"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/textView24"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@mipmap/img_dropdown"/>
            <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/make"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Select_CAR_Model"
                    android:textSize="20sp"/>
            <Spinner
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/textView25"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:background="@mipmap/img_dropdown"/>
            <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/model"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Select_Year"
                    android:textSize="20sp"/>
            <Spinner
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/textView28"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:background="@mipmap/img_dropdown"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
