<?xml version="1.0" encoding="utf-8"?>
<com.de.rocket.ue.layout.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_bg">

    <com.orange.tpms.widget.TitleWidget
        android:id="@+id/v_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_heightPercent="9%h"
        tools:background="@color/color_orange"/>

    <TextView
        android:layout_below="@+id/v_title_bar"
        android:id="@+id/tv_mmy_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:background="@color/color_FF314A56"
        app:layout_heightPercent="12%h"
        android:gravity="center"
        android:text="@string/app_name"
        app:layout_textSizePercent="3.3%h"/>

    <TextView
        android:layout_below="@+id/tv_mmy_title"
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/color_black"
        android:text="@string/app_sensor_quantity"
        app:layout_marginTopPercent="3%h"
        app:layout_textSizePercent="3%h"/>

    <EditText
        android:id="@+id/et_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_ff0000_r8"
        app:layout_marginTopPercent="3%h"
        android:layout_below="@+id/tv_tips"
        android:inputType="number"
        android:gravity="center"
        android:textColor="@color/color_black"
        android:hint="@string/app_number_choice"
        android:singleLine="true"
        android:padding="5dp"
        android:text="1"
        app:layout_heightPercent="7%h"
        app:layout_widthPercent="50%w"/>

    <Button
            android:focusable="true"
            android:id="@+id/bt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Program"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/et_number"
            app:layout_marginTopPercent="4%h"
            android:textColor="@color/color_white"
            android:background="@drawable/bt_long_selecter"
            app:layout_widthPercent="35%w"
            app:layout_heightPercent="8%h"/>

</com.de.rocket.ue.layout.PercentRelativeLayout>