<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.orange.tpms.ue.kt_frag.Frag_Auto_Lock" android:background="@color/backgroung">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp" android:layout_alignParentBottom="true">
        <Button
                android:text="@string/app_default"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/bt1" android:layout_weight="1"
                android:background="@color/buttoncolor" android:layout_marginEnd="0.5dp"
                android:textColor="@android:color/white"/>
        <Button
                android:text="@string/Set_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/setup" android:layout_weight="1"
                android:background="@color/buttoncolor" android:layout_marginStart="0.5dp"
                android:textColor="@android:color/white"/>
    </LinearLayout>
    <TextView
            android:text="@string/autolock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView18" android:layout_centerHorizontal="true"
            android:textSize="20sp" android:textColor="@color/buttoncolor" android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp" android:layout_marginEnd="20dp" android:gravity="center"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="48dp" android:id="@+id/spinner"
            android:layout_marginTop="20dp" android:layout_marginLeft="27dp" android:layout_marginRight="28dp"
            android:background="@color/white" android:layout_below="@id/textView18"/>
</RelativeLayout>
